# graphql-trait-resolver

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yaml
graphql-resolver/: Cargo.toml
graphql-resolver-derive/: Cargo.toml
graphql-resolver-derive/src/: lib.rs
graphql-resolver-example/: Cargo.toml
graphql-resolver-example/src/: main.rs
graphql-resolver/benches/: resolver_benchmarks.rs
graphql-resolver/examples/: axum_server.rs
graphql-resolver/src/: error.rs  lib.rs  server.rs
graphql-resolver/src/config/: mod.rs  parser.rs  schema.rs
graphql-resolver/src/directive/: call_directive.rs  mod.rs  resolver_directive.rs
graphql-resolver/src/n1/: detector.rs  error.rs  mod.rs
graphql-resolver/src/registry/: resolver.rs  storage.rs
graphql-resolver/src/schema/: builder.rs  field_resolver.rs
graphql-resolver/tests/: integration_tests.rs
graphql-trait-resolver/: Cargo.toml
graphql-trait-resolver-derive/: Cargo.toml
graphql-trait-resolver-derive/src/: lib.rs
graphql-trait-resolver/benches/: resolver_benchmarks.rs
graphql-trait-resolver/examples/: axum_server.rs
graphql-trait-resolver/src/: lib.rs  server.rs
graphql-trait-resolver/src/config/: mod.rs  parser.rs  schema.rs
graphql-trait-resolver/src/directive/: batch_key.rs  call_directive.rs  mod.rs  trait_directive.rs
graphql-trait-resolver/src/n1/: detector.rs  error.rs
graphql-trait-resolver/src/registry/: mod.rs  resolver.rs  storage.rs
graphql-trait-resolver/src/schema/: builder.rs  field_resolver.rs  mod.rs
graphql-trait-resolver/tests/: integration_tests.rs
