[workspace]
resolver = "2"
members = [
    "graphql-trait-resolver",
    "graphql-trait-resolver-derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alex"]

[workspace.dependencies]
async-graphql = { version = "7", features = ["dynamic-schema", "dataloader"] }
async-graphql-parser = "7"
async-graphql-value = "7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
inventory = "0.3"
async-trait = "0.1"
futures = "0.3"

syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rustc-hash = "2"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1
