[package]
name = "graphql-resolver-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proc macro for graphql-resolver"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
