[package]
name = "graphql-trait-resolver-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proc macro for graphql-trait-resolver"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
